<resources>
    <string name="app_name">PersianDatePicker</string>
    <string name="action_settings">Settings</string>
    <string name="farvardin">فروردین</string>
    <string name="ordibehesht">اردیبهشت</string>
    <string name="khordad">خرداد</string>
    <string name="tir">تیر</string>
    <string name="mordad">مرداد</string>
    <string name="shahrivar">شهریور</string>
    <string name="mehr">مهر</string>
    <string name="aban">آبان</string>
    <string name="azar">آذر</string>
    <string name="dey">دی</string>
    <string name="bahman">بهمن</string>
    <string name="esfand">اسفند</string>
    <string name="today">امروز :</string>
    <string name="friday">ج</string>
    <string name="thursday">پ</string>
    <string name="wednesday">چ</string>
    <string name="tusday">س</string>
    <string name="monday">د</string>
    <string name="sunday">ی</string>
    <string name="saturday">ش</string>
</resources>
