<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">


    <FontLoader.TextViewLoader
        android:id="@+id/date_picker_txt_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        tools:text="2018" />



    <FontLoader.TextViewLoader
        android:id="@+id/date_picker_txt_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_lable"
        android:textColor="@android:color/white"
        android:layout_margin="15dp"
        android:gravity="center"
        android:textSize="17sp"
        tools:text="@string/mordad" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FontLoader.TextViewLoader
            android:id="@+id/txt_saturday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            app:isans="bold"
            android:text="@string/saturday"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <FontLoader.TextViewLoader
            android:id="@+id/txt_sunday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:isans="bold"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sunday"
            android:textColor="@android:color/black"
            android:textSize="20sp" />


        <FontLoader.TextViewLoader
            android:id="@+id/txt_monday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:isans="bold"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/monday"
            android:textSize="20sp" />

        <FontLoader.TextViewLoader
            android:id="@+id/txt_tuesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tusday"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:isans="bold"/>



        <FontLoader.TextViewLoader
            android:id="@+id/txt_wednesday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wednesday"
            app:isans="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp" />


        <FontLoader.TextViewLoader
            android:id="@+id/txt_thursday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thursday"
            android:textColor="@android:color/black"
            app:isans="bold"
            android:textSize="20sp"
            />



        <FontLoader.TextViewLoader
            android:id="@+id/txt_friday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/friday"
            android:textColor="@android:color/black"
            app:isans="bold"
            android:textSize="20sp" />


    </LinearLayout>




    <android.support.v7.widget.RecyclerView
        android:id="@+id/date_picker_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        />


</LinearLayout>
